--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,9 +2,13 @@
     margin: 10px 20px;
     padding: 10px 20px;
 }
-    input[type=text]{
+input[type=text]{
         width: 240px;
         height: 30px;
         margin-left: 20px;
         border:none;
-    }
+}
+.changeBackground{
+    background-color: #FAD7A0;
+}
+    
