--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,8 +1,9 @@
-<div class="search-div">
+<div class="search-div" [ngClass]="{changeBackground : searchValue!=''}">
+    <!-- [ngClass]="className : condition" -->
     <span><b>Search:</b></span>
     <!-- <input (input)="changeSearchValue($event)" type="text" /> -->
    <!-- To implement 2 ways data binding add : [(ngModel)] to the input and add FormsModule to app.module.ts inside the imports array -->
     <input [(ngModel)]="searchValue" type="text" />
-    <div><span [hidden]="searchValue==''">You searched for "{{searchValue}}"</span>
+    <div *ngIf="searchValue!=''"><span >You searched for "{{searchValue}}"</span>
     </div>
 </div>
